# rider

./: .codecov.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.circleci/: config.yml
assets/: gear-64x64.raw  theme.txt
guitest/: main.rs
rider-config/: Cargo.toml
rider-config/src/: config.rs  directories.rs  editor_config.rs  lib.rs  scroll_config.rs
rider-derive/: Cargo.toml
rider-derive/src/: lib.rs
rider-editor/: Cargo.toml
rider-editor/src/: main.rs  tests.rs
rider-editor/src/app/: app_state.rs  application.rs  caret_manager.rs  file_content_manager.rs  mod.rs
rider-editor/src/renderer/: managers.rs  renderer.rs
rider-editor/src/tests/: mod.rs
rider-editor/src/ui/: icon.rs  label.rs  menu_bar.rs  mod.rs  save_button.rs  settings_button.rs  text_character.rs
rider-editor/src/ui/buttons/: mod.rs  save_button.rs  settings_button.rs
rider-editor/src/ui/caret/: caret.rs  caret_color.rs  caret_position.rs
rider-editor/src/ui/file/: editor_file.rs  editor_file_section.rs  editor_file_token.rs
rider-editor/src/ui/file_editor/: file_editor.rs  mod.rs
rider-editor/src/ui/filesystem/: directory.rs  file.rs  mod.rs
rider-editor/src/ui/modal/: mod.rs  open_file.rs  settings.rs
rider-editor/src/ui/project_tree/: mod.rs
rider-editor/src/ui/scroll_bar/: horizontal_scroll_bar.rs  mod.rs  vertical_scroll_bar.rs
rider-generator/: Cargo.toml
rider-generator/src/: config.rs  images.rs  main.rs  themes.rs  write_bytes_to.rs
rider-lexers/: Cargo.toml
rider-lexers/src/: lib.rs  plain.rs  rust_lang.rs  toml.rs
rider-match-widget/: Cargo.toml
rider-match-widget/src/: lib.rs
rider-themes/: Cargo.toml
rider-themes/src/: caret_color.rs  code_highlighting_color.rs  diff_color.rs  images.rs  lib.rs  serde_color.rs  theme.rs  theme_config.rs
rider-themes/src/predef/: default.rs  railscasts.rs
scripts/: codecov.sh  coverage.sh  serve-editor.sh  test.sh
src/: main.rs  tests.rs
src/app/: app_state.rs  application.rs  caret_manager.rs  config.rs  file_content_manager.rs  keyboard_handler.rs  mod.rs
src/config/: config.rs  creator.rs  directories.rs  editor_config.rs  mod.rs  scroll_config.rs
src/file/: caret.rs  editor_file.rs  editor_file_section.rs  editor_file_token.rs
src/lexer/: mod.rs  plain.rs  rust_lang.rs
src/renderer/: managers.rs  mod.rs  renderer.rs  resolve_color.rs
src/themes/: caret_color.rs  code_highlighting_color.rs  config_creator.rs  diff_color.rs  mod.rs  serde_color.rs  theme.rs  theme_config.rs
src/themes/predef/: default.rs  mod.rs  railscasts.rs
src/ui/: caret.rs  file_editor.rs  menu_bar.rs  mod.rs  text_character.rs
src/ui/caret/: caret.rs  caret_color.rs  caret_position.rs  mod.rs
src/ui/file/: editor_file.rs  editor_file_section.rs  editor_file_token.rs  mod.rs
src/ui/file_editor/: file_editor.rs  mod.rs
src/ui/scroll_bar/: horizontal_scroll_bar.rs  mod.rs  vertical_scroll_bar.rs
test_files/: test.rs
tests/: example.txt
