[package]
name = "rider-derive"
version = "0.1.0"
authors = ["Adrian Woźniak <adrian.wozniak.1986@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = { version = "*" }

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full", "extra-traits"]
